--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0",
+        "php": "~5.6|~7.0|^7.2.5|^8.0|8.0.3",
         "symfony/console": "^3.1"
     },
     "require-dev": {
