--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0|^7.2.5|^8.0|8.0.3",
-        "symfony/console": "^3.1"
+        "php": "^7.2.5|^8.0|8.0.3",
+        "symfony/console": "^3.4"
     },
     "require-dev": {
-        "phpunit/phpunit" : "~4.0||~5.0",
+        "phpunit/phpunit" : "^9.3",
         "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
