--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         }
     ],
     "require": {
-        "php": "^7.2.5|^8.0|8.0.3",
-        "symfony/console": "^5.4"
+        "php": "^7.2.5|^8.0|8.0.3"
     },
     "require-dev": {
         "phpunit/phpunit" : "^9.3",
