--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     ],
     "require": {
-        "php": "^7.2.5|^8.0"
+        "php": "^7.2.5|^8.0", 
+        "symfony/console": "^5.2"
     },
     "require-dev": {
         "phpunit/phpunit" : "^9.3",
