--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "^7.2.5|^8.0", 
+        "php": "8.0", 
         "symfony/console": "^5.3"
     },
     "require-dev": {
